// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render as another element 1`] = `
<div>
  <p
    class="emotion-0 emotion-1"
  >
    <span />
  </p>
</div>
`;

exports[`props should render correctly 1`] = `
<div>
  <div
    class="emotion-0 emotion-1"
  >
    <span />
  </div>
</div>
`;

exports[`props should render with custom styles (Array) 1`] = `
<div>
  <p
    class="emotion-0 emotion-1"
  >
    <span />
  </p>
</div>
`;

exports[`props should render with custom styles (object) 1`] = `
<div>
  <p
    class="emotion-0 emotion-1"
  >
    <span />
  </p>
</div>
`;

exports[`props should render with custom styles (string) 1`] = `
<div>
  <p
    class="emotion-0 emotion-1"
  >
    <span />
  </p>
</div>
`;
